# hw_8_se

./: models.py  pyproject.toml  search.py  seed.py
task_2/: consumer.py  models_contact_task_2.py  producer.py
