[tool.poetry]
name = "hw-8"
version = "0.1.0"
description = ""
authors = ["Alex <alexsa1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bson = "^0.5.10"
mongoengine = "^0.29.1"
redis = "^5.2.1"
pika = "^1.3.2"
faker = "^33.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
